Added Guestrazorfil, guestVM, controller

--- a/YesDay/Views/Couple/GuestList.cshtml
+++ b/YesDay/Views/Couple/GuestList.cshtml
@@ -1,7 +1,8 @@
-﻿@*@model CoupleGuestlistVM[]*@
+﻿@model CoupleGuestlistVM[]
+
 
 @foreach (var item in Model)
 {
-
+    <p>@item.Firstname[0]</p>
 
 }
