--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
+    <h4>YesDay</h4>
+    <form>
+        <input type="submit" asp-controller="Couple" asp-action="Logout" value="Logga ut" />
+    </form>
     <div>
         @RenderBody()
     </div>
