added taskmethod, attributes

--- a/YesDay/Views/Couple/AddGuest.cshtml
+++ b/YesDay/Views/Couple/AddGuest.cshtml
@@ -24,6 +24,6 @@
         <span asp-validation-for="Email"></span>
         <br />
     </div>
-    <input class="btn btn-light" type="submit" value="Lägg till ny gäst" />
+    <input class="btn btn-light" type="submit" value="Spara" />
     <br /><br />
 </form>
