--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -3,6 +3,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+
     <title>@ViewBag.Title</title>
 </head>
 <body>
