Guestadd buttons working

--- a/YesDay/Views/Couple/AddGuest.cshtml
+++ b/YesDay/Views/Couple/AddGuest.cshtml
@@ -36,8 +36,8 @@
         <label asp-for="GuestNote"></label>
         <textarea asp-for="GuestNote" rows="10"></textarea>
     </div>
-    <input class="btn btn-light" type="submit" value="Spara och stäng"/>
-    <input class="btn btn-light" type="submit" value="Spara och lägg till ny" />
+    <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng"/>
+    <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
 
     <br /><br />
     <a href="">Avbryt</a>
