worked with hamburger menu

--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -17,18 +17,15 @@
                     <div class="nav-toggle-bar"></div>
                 </div>
                 <nav class="nav">
-                    <form>
                         <ul>
-
-                            <li><a asp-controller="couple" asp-action="guestlist">Guestlist</a></li>
-                            <li><a asp-controller="Couple" asp-action="GuestList">Gästlista</a></li>
+                            <li><a asp-controller="couple" asp-action="overview">Översikt</a></li>
+                            <li><a asp-controller="couple" asp-action="guestList">Gästlista</a></li>
                             <li><a asp-controller="couple" asp-action="checklist">Checklista</a></li>
                             <li><a asp-controller="couple" asp-action="vendor">Leverantörer</a></li>
-                            <li><a href="www.google.se">Budget</a></li>
-                            <li><a href="#">Inställningar</a></li>
+                            <li><a asp-controller="couple" asp-action="budget" >Budget</a></li>
+                            <li><a asp-controller="couple" asp-action="settings">Inställningar</a></li>
                             <li><a asp-controller="public" asp-action="logout">Logga ut</a></li>
                         </ul>
-                    </form>
                 </nav>
                 <script>
                     (function () {
