Guestlist and addGUest all functions -done

--- a/YesDay/Views/Couple/CheckList.cshtml
+++ b/YesDay/Views/Couple/CheckList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CoupleChecklistVM[]
 @{
-    ViewData["Title"] = "Checklista";
+    ViewData["Title"] = "YesDay - Checklista";
 }
 
 <h2>CheckList</h2>
