--- a/YesDay/Views/Couple/AddGuest.cshtml
+++ b/YesDay/Views/Couple/AddGuest.cshtml
@@ -40,6 +40,6 @@
     <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
 
     <br /><br />
-    <a href="">Avbryt</a>
+    <a href="/Couple/GuestList">Avbryt</a>
 </form>
 
