--- a/YesDay/Views/Couple/AddTask.cshtml
+++ b/YesDay/Views/Couple/AddTask.cshtml
@@ -1,11 +1,11 @@
 ﻿@model CoupleAddNewTaskVM
 @{
-    ViewData["Title"] = "AddTask";
+    ViewData["Title"] = "YesDay - Uppgift";
 }
 
 <h2>AddTask</h2>
 
-<form asp-controller="Couple" asp-action="AddTask">
+<form asp-controller="Couple" asp-action="AddTask" method="post">
     <div>
 
         <label asp-for="TaskDescription"></label>
@@ -22,6 +22,10 @@
         <input asp-for="TaskStatus" />
         <br />
     </div>
-    <input class="btn btn-light" type="submit" value="Spara" />
+
+    <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng" />
+    <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
+
     <br /><br />
+    <a href="/Couple/Checklist">Avbryt</a>
 </form>
