--- a/YesDay/wwwroot/StyleSheet.css
+++ b/YesDay/wwwroot/StyleSheet.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background-color´: white;
 }
 
 .nav {
@@ -103,3 +104,10 @@
             -webkit-transform: rotate(-45deg);
             transform: rotate(-45deg);
         }
+
+#checklistbox {
+    width: 200px;
+    height: 350px;
+    padding: 10px;
+    border: 10px solid #b200ff;
+}
