Drag and drop in checklist

--- a/YesDay/Views/Couple/AddTask.cshtml
+++ b/YesDay/Views/Couple/AddTask.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "YesDay - Uppgift";
 }
 
-<h2>AddTask</h2>
+<h2>Lägga till uppgift</h2>
 
 <form asp-controller="Couple" asp-action="AddTask" method="post">
     <div>
@@ -26,6 +26,7 @@
     <input class="btn btn-light" type="submit" Name="SaveCancel" value="Spara och stäng" />
     <input class="btn btn-light" type="submit" Name="SaveAdd" value="Spara och lägg till ny" />
 
-    <br /><br />
+    <br />
+
     <a href="/Couple/Checklist">Avbryt</a>
 </form>
