--- a/YesDay/Views/Couple/GuestList.cshtml
+++ b/YesDay/Views/Couple/GuestList.cshtml
@@ -11,7 +11,16 @@
 
     <thead>
         <tr>
-            <th>Förnamn</th><th>Efternamn</th><th>Adress</th><th>Epost</th><th>Inbjuden av</th><th>Gästtitel</th><th>Bröllopsroll</th><th>OSA</th><th>Specialkost</th><th>Anteckningar</th>
+            <th>Förnamn</th>
+            <th>Efternamn</th>
+            <th>Adress</th>
+            <th>Epost</th>
+            <th>Inbjuden av</th>
+            <th>Gästtitel</th>
+            <th>Bröllopsroll</th>
+            <th>OSA</th>
+            <th>Specialkost</th>
+            <th>Anteckningar</th>
 
         </tr>
     </thead>
