Added files for expense and vendors and the methods

--- a/YesDay/Views/Couple/CheckList.cshtml
+++ b/YesDay/Views/Couple/CheckList.cshtml
@@ -50,20 +50,17 @@
 
                 }
             </div>
-            </div>
-            <div class="col-4">
-                <div id="checklistbox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-            </div>
-            <div class="col-4">
-                <div id="checklistbox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-            </div>
+        </div>
+        <div class="col-4">
+            <div id="checklistbox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+        </div>
+        <div class="col-4">
+            <div id="checklistbox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         </div>
     </div>
+</div>
 
 
 
-
-    <form asp-controller="Couple" asp-action="AddTask">
-        <input type="submit" value="Lägg till">
-    </form>
+<a href="/couple/addtask"><input type="submit" value="Lägg till"></a>
 
