--- a/YesDay/Views/Couple/GuestList.cshtml
+++ b/YesDay/Views/Couple/GuestList.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "YesDay - Gästlista";
 }
 
-<form asp-controller="Couple" asp-action="AddGuest">
-    <input type="submit" value="Lägg till">
-</form>
+<a href="/couple/addguest"><input type="submit" value="Lägg till"></a>
+
 <table>
 
     <thead>
