--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -19,15 +19,15 @@
                     <div class="nav-toggle-bar"></div>
                 </div>
                 <nav class="nav">
-                        <ul>
-                            <li><a asp-controller="couple" asp-action="overview">Översikt</a></li>
-                            <li><a asp-controller="couple" asp-action="guestList">Gästlista</a></li>
-                            <li><a asp-controller="couple" asp-action="checklist">Checklista</a></li>
-                            <li><a asp-controller="couple" asp-action="vendor">Leverantörer</a></li>
-                            <li><a asp-controller="couple" asp-action="budget" >Budget</a></li>
-                            <li><a asp-controller="couple" asp-action="settings">Inställningar</a></li>
-                            <li><a asp-controller="public" asp-action="logout">Logga ut</a></li>
-                        </ul>
+                    <ul>
+                        <li><a asp-controller="couple" asp-action="overview">Översikt</a></li>
+                        <li><a asp-controller="couple" asp-action="guestList">Gästlista</a></li>
+                        <li><a asp-controller="couple" asp-action="checklist">Checklista</a></li>
+                        <li><a asp-controller="couple" asp-action="vendor">Leverantörer</a></li>
+                        <li><a asp-controller="couple" asp-action="expense">Budget</a></li>
+                        <li><a asp-controller="couple" asp-action="settings">Inställningar</a></li>
+                        <li><a asp-controller="public" asp-action="logout">Logga ut</a></li>
+                    </ul>
                 </nav>
                 <script>
                     (function () {
