--- a/YesDay/wwwroot/StyleSheet.css
+++ b/YesDay/wwwroot/StyleSheet.css
@@ -8,7 +8,7 @@
     -o-transition: left 0.5s ease;
     transition: left 0.5s ease;
     background: #9fb8bf;
-    color: #515d61;
+    color: black;
     cursor: pointer;
     font-size: 2rem;
     height: 100vh;
@@ -88,7 +88,7 @@
     }
 
         .nav-toggle.expanded .nav-toggle-bar::after, .nav-toggle.expanded .nav-toggle-bar::before {
-            background: #515d61;
+            background: white;
             margin-top: 0;
         }
 
