--- a/YesDay/Views/Shared/_PublicLayout.cshtml
+++ b/YesDay/Views/Shared/_PublicLayout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="~/StyleSheet.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -45,7 +46,7 @@
                 </script>
             </div>
             <div class="col">
-                <h4>YesDay</h4>
+                <h4 style="font-family: 'Lobster', cursive;">YesDay</h4>
             </div>
 
             <div class="col">
