Drow-down guestlist, js drag and drop

--- a/YesDay/Views/Couple/CheckList.cshtml
+++ b/YesDay/Views/Couple/CheckList.cshtml
@@ -61,7 +61,5 @@
     </div>
 
 
-    <form asp-controller="Couple" asp-action="AddTask">
-        <input type="submit" value="Lägg till">
-    </form>
+<a href="/Couple/AddTask">Lägg till</a>
 
