added styling to settings

--- a/YesDay/Views/Couple/Overview.cshtml
+++ b/YesDay/Views/Couple/Overview.cshtml
@@ -1,13 +1,13 @@
 ﻿@model CoupleOverviewVM
 
 <div class="container">
-    <div class="row">
+    <div class="row" style="padding-top:50px;padding-bottom:50px">
         <h3>Välkomna @Model.FirstName1 och @Model.FirstName2 !</h3>
     </div>
     <div class="row">
         <p>Välj någon av funktionerna och börja planera er stora dag!</p>
     </div>
-    <div class="row">
+    <div class="row" style="padding-top:50px;padding-bottom:50px">
         <div class="col">
             <a asp-controller="Couple" asp-action="guestlist">
                 <img src="~/Images/Gästlista.png" alt="Gästlista" style="width:75px;height:75px;" />
