--- a/YesDay/wwwroot/StyleSheet.css
+++ b/YesDay/wwwroot/StyleSheet.css
@@ -117,3 +117,9 @@ h3 {
     padding: 10px;
     border: 10px solid #b200ff;
 }
+
+/*#daysremaining {
+    font-family: 'Roboto', sans-serif;
+    color: #9Fb8Bf;
+    margin-top: 15px;
+}*/
