--- a/YesDay/Views/Couple/Settings.cshtml
+++ b/YesDay/Views/Couple/Settings.cshtml
@@ -1,22 +1,25 @@
 ﻿@model CoupleSettingVM
 
+
 <form asp-controller="couple" asp-action="settings">
 
     @*<label asp-for="Password"></label>
-    <input asp-for="Password" />
-    <span asp-validation-for="Password"></span>*@
+        <input asp-for="Password" />
+        <span asp-validation-for="Password"></span>*@
+    <div class="form-group col-md-6">
 
-    <label asp-for="FirstName1"></label>
-    <input asp-for="FirstName1" />
-    <span asp-validation-for="FirstName1"></span>
+        <label asp-for="FirstName1"></label>
+        <input asp-for="FirstName1" class="form-control" />
+        <span asp-validation-for="FirstName1"></span>
 
-    <label asp-for="FirstName2"></label>
-    <input asp-for="FirstName2" />
-    <span asp-validation-for="FirstName2"></span>
+        <label asp-for="FirstName2"></label>
+        <input asp-for="FirstName2" class="form-control" />
+        <span asp-validation-for="FirstName2"></span>
 
-    <label asp-for="WeddingDate"></label>
-    <input asp-for="WeddingDate" />
-    <span asp-validation-for="WeddingDate"></span>
+        <label asp-for="WeddingDate"></label>
+        <input asp-for="WeddingDate" class="form-control" />
+        <span asp-validation-for="WeddingDate"></span>
 
-    <input class="button" type="submit" value="Spara ändringar" />
+    </div>
+    <input class="btn btn-light" type="submit" value="Spara ändringar" />
 </form>
