--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -49,7 +49,8 @@
 
                     }());
                 </script>
-                <img src="~/Images/banner.png" alt="logo" style="height:68px; width:200px" />
+                <a asp-controller="Couple" asp-action="overview">
+                <img src="~/Images/banner.png" alt="logo" style="height:68px; width:200px" /></a>
                 @*<h3 style="font-family: 'Lobster', cursive;">YesDay</h3>*@
             </div>
 
