--- a/YesDay/Views/Couple/CheckList.cshtml
+++ b/YesDay/Views/Couple/CheckList.cshtml
@@ -4,20 +4,189 @@
     ViewData["Title"] = "YesDay - Checklista";
 }
 <script>
-    function allowDrop(ev) {
-        ev.preventDefault();
+    var droppables = new Array();
+    var itemBeingDragged = null;
+    var mouseDownPoint = { x: 0, y: 0 };
+
+    function onDocumentMouseMove(mouseMoveEvent) {
+        var point = { x: mouseMoveEvent.pageX, y: mouseMoveEvent.pageY };
+
+        // Drag the draggable to this position
+        itemBeingDragged.dragTo(point);
+
+        // If there are any droppable elements at this position, notify them
+        for (var i = 0; i < droppables.length; i++) {
+            if (droppables[i].contains(point) && !droppables[i].isBeingDraggedOver) {
+                droppables[i].onDragEnter();
+            } else if (!droppables[i].contains(point) && droppables[i].isBeingDraggedOver) {
+                droppables[i].onDragExit();
+            }
+        }
     }
 
-    function drag(ev) {
-        ev.dataTransfer.setData("text", ev.target.id);
+    function onDocumentMouseUp(mouseUpEvent) {
+        // If any droppable is being dragged over, accept the drop
+        for (var i = 0; i < droppables.length; i++) {
+            if (droppables[i].isBeingDraggedOver) {
+                droppables[i].onDragDrop(itemBeingDragged);
+            }
+        }
+
+        // Reset the position of the item being dragged and clear out the document event handlers
+        itemBeingDragged.reset(mouseUpEvent);
     }
 
-    function drop(ev) {
-        ev.preventDefault();
-        var data = ev.dataTransfer.getData("text");
-        ev.target.appendChild(document.getElementById(data));
-    }
+    var Draggable = function (elementId) {
+        this.init(elementId);
+    };
 
+    Draggable.prototype = {
+        init: function (element) {
+            if (typeof element === "string") element = document.getElementById(element);
+
+            this.element = element;
+            this.element.className += "draggable";
+
+            var self = this;
+
+            this.element.onmousedown = function (mouseDownEvent) {
+                this.style.zIndex = "1000";
+
+                itemBeingDragged = self;
+
+                mouseDownPoint.x = mouseDownEvent.pageX;
+                mouseDownPoint.y = mouseDownEvent.pageY;
+
+                document.onmousemove = onDocumentMouseMove;
+                document.onmouseup = onDocumentMouseUp;
+            };
+        },
+
+        // Called when the mouse is moved (after having been pressed on this element)
+        dragTo: function (point) {
+            this.element.style.left = (point.x - mouseDownPoint.x) + "px";
+            this.element.style.top = (point.y - mouseDownPoint.y) + "px";
+        },
+
+        // Called when the mouse is lifted (after having been pressed on this element)
+        reset: function () {
+            this.element.style.zIndex = "";
+            this.element.style.left = "";
+            this.element.style.top = "";
+
+            itemBeingDragged = null;
+
+            mouseDownPoint.x = 0;
+            mouseDownPoint.y = 0;
+
+            document.onmousemove = null;
+            document.onmouseup = null;
+        }
+    };
+
+    // customDragDrop is a custom function which will be called when a Draggable is dropped
+    // on this Droppable; it is passed the Draggable that was dropped
+    var Droppable = function (element, customDragDrop) {
+        this.init(element, customDragDrop);
+    };
+
+    Droppable.prototype = {
+        init: function (element, customDragDrop) {
+            if (typeof element === "string") element = document.getElementById(element);
+
+            this.element = element;
+            this.isBeingDraggedOver = false;
+            this.customDragDrop = customDragDrop;
+
+            droppables.push(this);
+        },
+
+        // Calculate the top-left coordinate of this element
+        position: function () {
+            var position = { x: this.element.offsetLeft, y: this.element.offsetTop };
+
+            var offsetParent = this.element.offsetParent;
+            while (offsetParent) {
+                position.x += offsetParent.offsetLeft;
+                position.y += offsetParent.offsetTop;
+                offsetParent = offsetParent.offsetParent;
+            }
+
+            return position;
+        },
+
+        // Calculate whether the given coordinate falls within this element's boundaries
+        contains: function (point) {
+            var topLeft = this.position();
+            var bottomRight = {
+                x: topLeft.x + this.element.offsetWidth,
+                y: topLeft.y + this.element.offsetHeight
+            };
+
+            return (
+                topLeft.x < point.x
+                && topLeft.y < point.y
+                && point.x < bottomRight.x
+                && point.y < bottomRight.y
+            );
+        },
+
+        // Called when an item is dragged into this element
+        onDragEnter: function () {
+            this.isBeingDraggedOver = true;
+            this.element.className += "dragOver";
+        },
+
+        // Called when an item is dragged out of this element
+        onDragExit: function () {
+            this.isBeingDraggedOver = false;
+            this.element.className = this.element.className.replace(/\bdragOver\b/, "");
+        },
+
+        // Called when an item is dropped on this element
+        onDragDrop: function (draggable) {
+            this.onDragExit();
+            this.customDragDrop(draggable);
+        }
+    };
+    window.onload = function () {
+        // custom data
+
+        var data = [];
+
+        @foreach (var item in Model)
+        {
+             <text> data.push(["@item.TaskDescription"]);</text>
+
+        }
+
+
+
+        var availableMetrics = document.getElementById("available_metrics_list");
+
+        for (var i = 0; i < data.length; i++) {
+            var liElement = document.createElement("li");
+            liElement.appendChild(document.createTextNode(data[i]));
+            availableMetrics.appendChild(liElement);
+            var liElementDraggable = new Draggable(liElement);
+        }
+
+        var availableMetricsDroppable = new Droppable(availableMetrics, function (draggable) {
+            if (this.element !== draggable.element.parentNode) {
+                this.element.appendChild(draggable.element);
+            }
+        });
+
+        var selectedMetricsDroppable = new Droppable("next_metric", function (draggable) {
+            if (this.element.parentNode !== draggable.element.parentNode) {
+                this.element.parentNode.insertBefore(draggable.element, this.element);
+            }
+        });
+
+        new Droppable("remove_metric", function (draggable) {
+            availableMetricsDroppable.onDragDrop(draggable);
+        });
+    };
 
 </script>
 
@@ -37,29 +206,40 @@
 
         </div>
     </div>
+</div>
+<div class="container">
     <div class="row">
         <div class="col-4">
-            <div id="checklistbox" ondrop="drop(event)" ondragover="allowDrop(event)">
-                @foreach (var item in Model)
-                {
-
-                    <p id="@item.TaskDescription" draggable="true" ondragstart="drag(event)">
-                        @item.TaskDescription
-                        @item.DueDate.Value.ToShortDateString()
-                    </p>
-
-                }
-            </div>
-            </div>
-            <div class="col-4">
-                <div id="checklistbox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-            </div>
-            <div class="col-4">
-                <div id="checklistbox" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div id="available_metrics_filter">
+                <ul id="available_metrics_list"> </ul>
             </div>
         </div>
+        <div class="col-4">
+
+
+        </div>
+        <div class="col-4">
+            <div id="selected_metrics">
+                <ul id="selected_metrics_list">
+                    <li id="next_metric">Next Draggable</li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+@*@foreach (var item in Model)
+{
+    <div>
+        @item.TaskDescription
+        @item.DueDate.Value.ToShortDateString()
     </div>
 
+}*@
+
 <a href="/couple/AddTask"><input type="submit" value="Lägg till"></a>
+
+
 
 
