--- a/YesDay/wwwroot/StyleSheet.css
+++ b/YesDay/wwwroot/StyleSheet.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color´: white;
+    background-color: white;
     color: #515D61;
     font-family: 'Roboto', sans-serif;
 }
@@ -111,15 +111,73 @@ h3 {
             transform: rotate(-45deg);
         }
 
-#checklistbox {
-    width: 200px;
-    height: 350px;
-    padding: 10px;
-    border: 10px solid #b200ff;
-}
 
 /*#daysremaining {
     font-family: 'Roboto', sans-serif;
     color: #9Fb8Bf;
     margin-top: 15px;
 }*/
+
+
+#available_metrics_filter {
+    margin: 5px;
+    border: 1px solid gray;
+    padding: 5px;
+    background-color: rgb(230, 230, 230);
+}
+
+#available_metrics_list {
+    padding: 0px;
+    border: 1px solid gray;
+    padding: 10px;
+    background-color: white;
+}
+
+    #available_metrics_list li {
+        margin-top: -1px;
+        border: 1px solid gray;
+        padding: 5px;
+        list-style-type: none;
+        background-color: white;
+    }
+
+#selected_metrics_list {
+    margin: 5px;
+    border: 1px solid gray;
+    padding: 10px;
+    background-color: white;
+}
+
+    #selected_metrics_list li {
+        margin-top: -1px;
+        border: 1px solid gray;
+        padding: 5px;
+        list-style-type: none;
+        background-color: white;
+    }
+
+        #selected_metrics_list li:last-child {
+            border: 1px dotted gray;
+        }
+
+#next_metric {
+    color: gray;
+}
+
+#remove_metric {
+    margin: 5px;
+    border: 1px dotted gray;
+    padding: 5px;
+    color: gray;
+    text-align: center;
+    background-color: white;
+}
+
+.draggable {
+    position: relative;
+    cursor: default;
+}
+
+.dragOver {
+    background-color: rgb(232, 232, 255) !important;
+}
