Updated guestlist button

--- a/YesDay/Views/Couple/GuestList.cshtml
+++ b/YesDay/Views/Couple/GuestList.cshtml
@@ -3,41 +3,58 @@
 @{
     ViewData["Title"] = "YesDay - Gästlista";
 }
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h3>Gästlista</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <a href="/couple/addguest"><input class="btn btn-light"type="submit" value="Lägg till"></a>
+        </div>
+    </div>
 
-<a href="/couple/addguest"><input type="submit" value="Lägg till"></a>
+    <div class="row">
+        <div class="col">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Förnamn</th>
+                        <th scope="col">Efternamn</th>
+                        <th scope="col">Adress</th>
+                        <th scope="col">Epost</th>
+                        <th scope="col">Inbjuden av</th>
+                        <th scope="col">Gästtitel</th>
+                        <th scope="col">Bröllopsroll</th>
+                        <th scope="col">OSA</th>
+                        <th scope="col">Specialkost</th>
+                        <th scope="col">Anteckningar</th>
+                        <th></th>
 
-<table>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.Firstname</td>
+                            <td>@item.Lastname</td>
+                            <td>@item.Address</td>
+                            <td>@item.Email</td>
+                            <td>@item.InvitedBy</td>
+                            <td>@item.GuestTitle</td>
+                            <td>@item.WeddingCrewTitle</td>
+                            <td>@item.Rsvp</td>
+                            <td>@item.FoodPreference</td>
+                            <td>@item.GuestNote</td>
+                            <td><a asp-controller="Couple" asp-action="UpdateGuest" asp-route-id="@item.Id">Uppdatera</a></td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-    <thead>
-        <tr>
-            <th>Förnamn</th>
-            <th>Efternamn</th>
-            <th>Adress</th>
-            <th>Epost</th>
-            <th>Inbjuden av</th>
-            <th>Gästtitel</th>
-            <th>Bröllopsroll</th>
-            <th>OSA</th>
-            <th>Specialkost</th>
-            <th>Anteckningar</th>
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-        <tr>
-            <td>@item.Firstname</td>
-            <td>@item.Lastname</td>
-            <td>@item.Address</td>
-            <td>@item.Email</td>
-            <td>@item.InvitedBy</td>
-            <td>@item.GuestTitle</td>
-            <td>@item.WeddingCrewTitle</td>
-            <td>@item.Rsvp</td>
-            <td>@item.FoodPreference</td>
-            <td>@item.GuestNote</td>
-        </tr>
-        }
-    </tbody>
-</table>
+</div>
