--- a/YesDay/Views/Shared/_CoupleLayout.cshtml
+++ b/YesDay/Views/Shared/_CoupleLayout.cshtml
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="width:100%">
         <div class="row">
             <div class="col" style="width:5px; height:68px">
                 <div class="nav-toggle">
